[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django-superadmin"
dynamic = ["version"]
description = "A Django app for build admin sites like django admin."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Denis Siavichay", email = "dbsiavichay@gmail.com" }]
requires-python = ">=3.8"
dependencies = ["pyyaml"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/dbsiavichay/django-superadmin"

[project.optional-dependencies]
dev = [
    "black==20.8b1",
    "pre-commit",
    "twine",
    "build",
    "setuptools-scm",
    "pytest-django",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests/test_*.py"]
